--- a/articles/cognitive-services/form-recognizer/index.yml
+++ b/articles/cognitive-services/form-recognizer/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: PatrickFarley
   ms.author: pafarley
   ms.date: 09/05/2019
-  ms.openlocfilehash: 5f0893f53c18bfeead5135a7ffdbc3d9d806bc79
-  ms.sourcegitcommit: d76108b476259fe3f5f20a91ed2c237c1577df14
+  ms.openlocfilehash: 3ba0788b150f39c43471fd9d5e69b14a36ddbb78
+  ms.sourcegitcommit: b8eba4e733ace4eb6d33cc2c59456f550218b234
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/29/2020
-  ms.locfileid: "92913009"
+  ms.lasthandoff: 11/23/2020
+  ms.locfileid: "95493606"
 landingContent:
 - title: Form Recognizer について
   linkLists:
@@ -96,6 +96,10 @@ landingContent:
       url: concept-business-cards.md?
 - title: テキスト レイアウト情報を取得する
   linkLists:
+  - linkListType: concept
+    links:
+    - text: レイアウトの概念
+      url: concept-layout.md?
   - linkListType: quickstart
     links:
     - text: .NET SDK の使用
