--- a/articles/index.yml
+++ b/articles/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.date: 09/25/2020
   featureFlags:
   - clicktale
-  ms.openlocfilehash: b29654a0eb305d2e20dcc8aed5c60d96b7ca3268
-  ms.sourcegitcommit: 96918333d87f4029d4d6af7ac44635c833abb3da
+  ms.openlocfilehash: 2f8379447edbe6ce7d74780e2f87b79cf77c72b7
+  ms.sourcegitcommit: c95e2d89a5a3cf5e2983ffcc206f056a7992df7d
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 11/04/2020
-  ms.locfileid: "93313262"
+  ms.lasthandoff: 11/24/2020
+  ms.locfileid: "95527039"
 highlightedContent:
   items:
   - title: Azure 開発者向けファースト ステップ ガイド
@@ -26,13 +26,13 @@ highlightedContent:
     url: guides/developer/azure-developer-guide.md
   - title: Azure アーキテクチャ センターを使用してアプリを設計する
     itemType: architecture
-    url: https://docs.microsoft.com/azure/architecture/
+    url: /azure/architecture/
   - title: クラウド導入フレームワークを使用して組織を準備する
     itemType: overview
-    url: https://docs.microsoft.com/azure/cloud-adoption-framework/
+    url: /azure/cloud-adoption-framework/
   - title: Microsoft Learn でスキルを身に付ける
     itemType: learn
-    url: https://docs.microsoft.com/learn/browse/?products=azure&resource_type=learning%20path
+    url: /learn/browse/?products=azure&resource_type=learning%2bpath
 productDirectory:
   title: Azure 製品を参照する
   items:
@@ -47,7 +47,7 @@ productDirectory:
     imageSrc: https://static.docs.com/ui/media/product/azure/bot-service.svg
     azureCategories:
     - ai-machine-learning
-    url: https://docs.microsoft.com/azure/bot-service/
+    url: /azure/bot-service/
   - title: Azure Cognitive Search
     summary: モバイルおよび Web アプリ開発向け AI 搭載クラウド検索サービス
     imageSrc: https://static.docs.com/ui/media/product/azure/search.svg
@@ -89,7 +89,7 @@ productDirectory:
     imageSrc: https://static.docs.com/ui/media/product/azure/rtos.svg
     azureCategories:
     - iot
-    url: https://docs.microsoft.com/azure/rtos/
+    url: /azure/rtos/
   - title: Bing Autosuggest
     summary: アプリに検索用のインテリジェントな自動提案機能を追加します
     imageSrc: ./media/index/API_Bing_AutoSuggest.svg
@@ -236,7 +236,7 @@ productDirectory:
     imageSrc: https://static.docs.com/ui/media/product/azure/bonsai.svg
     azureCategories:
     - ai-machine-learning
-    url: https://docs.microsoft.com/bonsai/
+    url: /bonsai/
   - title: QnA Maker
     summary: 情報から会話形式のナビゲーションしやすい回答を抽出します
     imageSrc: https://static.docs.com/ui/media/product/azure/cognitive-services.svg
@@ -248,19 +248,19 @@ productDirectory:
     imageSrc: https://static.docs.com/ui/media/product/azure/cognitive-services.svg
     azureCategories:
     - ai-machine-learning
-    url: cognitive-services/speaker-recognition/home.md
+    url: ./cognitive-services/speech-service/speaker-recognition-overview.md
   - title: 音声テキスト変換
     summary: 音声をテキストに変換してより自然な対話を実現
     imageSrc: https://static.docs.com/ui/media/product/azure/cognitive-services.svg
     azureCategories:
     - ai-machine-learning
-    url: https://docs.microsoft.com/azure/cognitive-services/speech-service/index#pivot=start&panel=speechtotext
+    url: ./cognitive-services/speech-service/index-speech-to-text.yml
   - title: 音声翻訳
     summary: リアルタイムの音声翻訳をアプリに簡単に統合
     imageSrc: https://static.docs.com/ui/media/product/azure/cognitive-services.svg
     azureCategories:
     - ai-machine-learning
-    url: https://docs.microsoft.com/azure/cognitive-services/speech-service/index#pivot=start&panel=speechtranslation
+    url: ./cognitive-services/speech-service/index-speech-translation.yml
   - title: Text Analytics
     summary: センチメントとトピックを簡単に評価して、ユーザーが何を求めているのかを把握します
     imageSrc: https://static.docs.com/ui/media/product/azure/cognitive-services.svg
@@ -272,7 +272,7 @@ productDirectory:
     imageSrc: https://static.docs.com/ui/media/product/azure/cognitive-services.svg
     azureCategories:
     - ai-machine-learning
-    url: https://docs.microsoft.com/azure/cognitive-services/speech-service/index#pivot=start&panel=texttospeech
+    url: ./cognitive-services/speech-service/index-text-to-speech.yml
   - title: Translator
     summary: 単純な REST API 呼び出しで機械翻訳を簡単に行います
     imageSrc: https://static.docs.com/ui/media/product/azure/cognitive-services.svg
@@ -367,7 +367,7 @@ productDirectory:
     imageSrc: https://static.docs.com/ui/media/product/azure/power-bi.svg
     azureCategories:
     - analytics
-    url: https://docs.microsoft.com/power-bi/developer/azure-pbie-what-is-power-bi-embedded
+    url: /power-bi/developer/azure-pbie-what-is-power-bi-embedded
   - title: R Server for HDInsight
     summary: 予測分析、機械学習、ビッグ データの統計モデリング
     imageSrc: https://static.docs.com/ui/media/product/azure/hdinsight.svg
@@ -425,13 +425,13 @@ productDirectory:
     imageSrc: ./media/index/logo_cyclecloud.svg
     azureCategories:
     - compute
-    url: https://docs.microsoft.com/azure/cyclecloud/index
+    url: /azure/cyclecloud/index
   - title: Azure Dedicated Host
     summary: Windows および Linux 用の Azure VM をホストする専用物理サーバー
     imageSrc: https://static.docs.com/ui/media/product/azure/virtual-machine.svg
     azureCategories:
     - compute
-    url: virtual-machines/windows/dedicated-hosts.md
+    url: ./virtual-machines/dedicated-hosts.md
   - title: Azure Functions
     summary: サーバーレス コードを使用してイベントを処理
     imageSrc: https://static.docs.com/ui/media/product/azure/functions.svg
@@ -501,7 +501,7 @@ productDirectory:
     azureCategories:
     - compute
     - databases
-    url: https://docs.microsoft.com/azure/virtual-machines/windows/sql/virtual-machines-windows-sql-server-iaas-overview?toc=%2Fazure%2Fvirtual-machines%2Fwindows%2Ftoc.json
+    url: ./azure-sql/virtual-machines/windows/sql-server-on-azure-vm-iaas-what-is-overview.md?toc=%252fazure%252fvirtual-machines%252fwindows%252ftoc.json
   - title: Static Web Apps (プレビュー)
     summary: ソース コードからグローバルな高可用性まで、合理化されたフルスタック開発を実現する最新の Web アプリ サービス
     imageSrc: ./media/index/static-apps.svg
@@ -563,7 +563,7 @@ productDirectory:
     azureCategories:
     - containers
     - web
-    url: app-service/containers/index.yml
+    url: ./app-service/index.yml
   - title: FHIR 用の Azure API
     summary: 医療データ ソリューションと相互運用性のための FHIR サービスを簡単に作成してデプロイする
     imageSrc: https://static.docs.com/ui/media/product/azure/api-for-fhir.svg
@@ -647,7 +647,7 @@ productDirectory:
     imageSrc: https://docs.microsoft.com/sql/tools/media/overview-sql-tools/azure-data-studio.svg
     azureCategories:
     - developer-tools
-    url: https://docs.microsoft.com/sql/azure-data-studio/
+    url: /sql/azure-data-studio/
   - title: Azure DevOps
     summary: チームがコードの共有、作業の追跡、ソフトウェアの出荷を行うためのサービス
     imageSrc: https://static.docs.com/ui/media/product/azure/devops.svg
@@ -655,7 +655,7 @@ productDirectory:
     - developer-tools
     - devops
     - hybrid
-    url: https://docs.microsoft.com/azure/devops/
+    url: /azure/devops/
   - title: Azure DevTest Labs
     summary: 再利用可能なテンプレートとアーティファクトを使用して環境をすばやく構築
     imageSrc: https://static.docs.com/ui/media/product/azure/devtest-labs.svg
@@ -675,13 +675,13 @@ productDirectory:
     azureCategories:
     - developer-tools
     - devops
-    url: https://docs.microsoft.com/azure/devops/pipelines/
+    url: /azure/devops/pipelines/
   - title: Visual Studio
     summary: クラウドでアプリケーションを開発するための強力で柔軟な環境
     imageSrc: https://docs.microsoft.com/media/logos/logo_visual-studio.svg
     azureCategories:
     - developer-tools
-    url: https://docs.microsoft.com/visualstudio/windows
+    url: /visualstudio/windows
   - title: Visual Studio Code
     summary: クラウド開発向けの強力な軽量コード エディター
     imageSrc: https://docs.microsoft.com/media/logos/logo_vs-code.svg
@@ -693,7 +693,7 @@ productDirectory:
     imageSrc: https://docs.microsoft.com/media/logos/logo_visual-studio.svg
     azureCategories:
     - developer-tools
-    url: https://docs.microsoft.com/visualstudio/online/overview/what-is-vsonline
+    url: /visualstudio/online/overview/what-is-vsonline
   - title: Application Insights
     summary: アプリケーション、インフラストラクチャ、ネットワークを完全に監視
     imageSrc: https://static.docs.com/ui/media/product/azure/application-insights.svg
@@ -706,13 +706,13 @@ productDirectory:
     imageSrc: https://static.docs.com/ui/media/product/azure/artifacts.svg
     azureCategories:
     - devops
-    url: https://docs.microsoft.com/azure/devops/artifacts/
+    url: /azure/devops/artifacts/
   - title: Azure Boards
     summary: チームの垣根を超えて作業を計画、追跡、相談します
     imageSrc: https://static.docs.com/ui/media/product/azure/boards.svg
     azureCategories:
     - devops
-    url: https://docs.microsoft.com/azure/devops/boards/
+    url: /azure/devops/boards/
   - title: Azure Monitor
     summary: アプリケーション、インフラストラクチャ、ネットワークを完全に監視
     imageSrc: https://static.docs.com/ui/media/product/azure/monitor.svg
@@ -725,20 +725,20 @@ productDirectory:
     imageSrc: https://static.docs.com/ui/media/product/azure/repos.svg
     azureCategories:
     - devops
-    url: https://docs.microsoft.com/azure/devops/repos/
+    url: /azure/devops/repos/
   - title: Azure Test Plans
     summary: 手動および探索的テストのツールキットを使い、自信を持ってテスト、リリースを実施
     imageSrc: https://static.docs.com/ui/media/product/azure/test-plans.svg
     azureCategories:
     - devops
-    url: https://docs.microsoft.com/azure/devops/test/
+    url: /azure/devops/test/
   - title: Azure 向けの GitHub Actions
     summary: GitHub から Azure へのアプリのビルド、テスト、デプロイ
     imageSrc: ./media/index/github-actions-icon.svg
     azureCategories:
     - devops
     - developer-tools
-    url: https://docs.microsoft.com/en-us/azure/developer/github/github-actions
+    url: /azure/developer/github/github-actions
   - title: Azure Active Directory (AD)
     summary: オンプレミスのディレクトリを同期してシングル サインオンを可能に
     imageSrc: https://static.docs.com/ui/media/product/azure/active-directory.svg
@@ -772,25 +772,25 @@ productDirectory:
     imageSrc: https://static.docs.com/ui/media/product/azure/stack.svg
     azureCategories:
     - hybrid
-    url: https://docs.microsoft.com/azure-stack/
+    url: /azure-stack/
   - title: Azure Stack HCI (プレビュー)
     summary: ハイパーコンバージド インフラストラクチャと Azure およびハイブリッド サービスを統合して、オンプレミスで仮想ワークロードを実行
     imageSrc: https://static.docs.com/ui/media/product/azure/stack-hci.svg
     azureCategories:
     - hybrid
-    url: https://docs.microsoft.com/azure-stack/hci/
+    url: /azure-stack/hci/
   - title: Azure Stack Hub
     summary: Azure Stack Hub は統合ハードウェア システムとして販売されており、ソフトウェアは検証済みハードウェアに事前にインストールされています
     imageSrc: https://static.docs.com/ui/media/product/azure/stack-hub.svg
     azureCategories:
     - hybrid
-    url: https://docs.microsoft.com/azure-stack/operator/
+    url: /azure-stack/operator/
   - title: Azure Stack Edge
     summary: Azure のコンピューティング、ストレージ、インテリジェンスをエッジにもたらす Azure マネージド アプライアンス
     imageSrc: https://static.docs.com/ui/media/product/azure/stack-edge.svg
     azureCategories:
     - hybrid
-    url: https://docs.microsoft.com/azure/databox-online/
+    url: ./databox-online/index.yml
   - title: Security Center
     summary: セキュリティ管理を統合し、高度な脅威保護をハイブリッド クラウド ワークロード間で有効化
     imageSrc: https://static.docs.com/ui/media/product/azure/security-center.svg
@@ -824,7 +824,7 @@ productDirectory:
     azureCategories:
     - identity
     - security
-    url: https://docs.microsoft.com/azure/information-protection/
+    url: /azure/information-protection/
   - title: API Management
     summary: API を開発者、パートナー、従業員に安全かつ大規模に発行
     imageSrc: https://static.docs.com/ui/media/product/azure/api-management.svg
@@ -885,7 +885,7 @@ productDirectory:
     imageSrc: https://static.docs.com/ui/media/product/azure/sphere.svg
     azureCategories:
     - iot
-    url: https://docs.microsoft.com/azure-sphere/
+    url: /azure-sphere/
   - title: Azure Time Series Insights
     summary: IoT デバイスの時系列データを調査して分析
     imageSrc: https://static.docs.com/ui/media/product/azure/time-series-insights-environments.svg
@@ -905,7 +905,7 @@ productDirectory:
     imageSrc: https://static.docs.com/ui/media/product/azure/iot-windows10-core-services.svg
     azureCategories:
     - iot
-    url: https://docs.microsoft.com/windows/iot-core/
+    url: /windows/iot-core/
   - title: オートメーション
     summary: プロセス自動化でクラウド管理を簡素化
     imageSrc: https://static.docs.com/ui/media/product/azure/automation.svg
@@ -1089,13 +1089,13 @@ productDirectory:
     imageSrc: https://docs.microsoft.com/media/logos/logo_vs-mobile-center.svg
     azureCategories:
     - mobile
-    url: https://docs.microsoft.com/appcenter/
+    url: /appcenter/
   - title: Xamarin
     summary: クラウドを活用したモバイル アプリを迅速に作成
     imageSrc: https://docs.microsoft.com/media/logos/logo_xamarin.svg
     azureCategories:
     - mobile
-    url: https://docs.microsoft.com/xamarin/
+    url: /xamarin/
   - title: Application Gateway
     summary: 安全でスケーラブルな高可用性 Web フロントエンドを Azure で構築
     imageSrc: https://static.docs.com/ui/media/product/azure/application-gateways.svg
@@ -1121,14 +1121,14 @@ productDirectory:
     azureCategories:
     - security
     - iot
-    url: security-center/defender-for-iot-introduction.md
+    url: ./security-center/azure-defender.md
   - title: Azure DDoS Protection
     summary: お客様のアプリケーションを分散型サービス拒否 (DDoS) 攻撃から保護
     imageSrc: https://static.docs.com/ui/media/product/azure/ddos-protection.svg
     azureCategories:
     - networking
     - security
-    url: virtual-network/ddos-protection-overview.md
+    url: ./ddos-protection/ddos-protection-overview.md
   - title: Azure DNS
     summary: Azure で DNS ドメインをホスト
     imageSrc: https://static.docs.com/ui/media/product/azure/dns.svg
@@ -1293,28 +1293,28 @@ tools:
   items:
   - title: Python
     imageSrc: https://docs.microsoft.com/media/logos/logo_python.svg
-    url: https://docs.microsoft.com/azure/developer/python/
+    url: /azure/developer/python/
   - title: .NET
     imageSrc: ./media/index/net-logo.svg
-    url: https://docs.microsoft.com/dotnet/azure/
+    url: /dotnet/azure/
   - title: JavaScript
     imageSrc: https://docs.microsoft.com/media/logos/logo_js.svg
-    url: https://docs.microsoft.com/azure/developer/javascript/
+    url: /azure/developer/javascript/
   - title: Java
     imageSrc: https://docs.microsoft.com/media/logos/logo_java.svg
-    url: https://docs.microsoft.com/azure/developer/java/
+    url: /azure/developer/java/
   - title: Go
     imageSrc: https://docs.microsoft.com/media/logos/logo_Go-lightblue.svg
-    url: https://docs.microsoft.com/azure/developer/go/
+    url: /azure/developer/go/
   - title: REST API
     imageSrc: https://docs.microsoft.com/media/logos/logo_REST.svg
-    url: https://docs.microsoft.com/rest/api/
+    url: /rest/api/
   - title: Azure PowerShell
     imageSrc: https://docs.microsoft.com/media/logos/logo_powershell.svg
-    url: https://docs.microsoft.com/powershell/azure/
+    url: /powershell/azure/
   - title: Azure CLI
     imageSrc: https://docs.microsoft.com/media/logos/logo_CLIgeneric.svg
-    url: https://docs.microsoft.com/cli/azure/
+    url: /cli/azure/
   - title: ARM テンプレート
     imageSrc: https://static.docs.com/ui/media/product/azure/resource-groups.svg
     url: azure-resource-manager/templates/index.yml
@@ -1339,4 +1339,4 @@ additionalContent:
       url: germany/index.yml
     - title: Azure China 21Vianet
       summary: 中国に配置され、21Vianet によって運営される専用クラウド。
-      url: https://docs.microsoft.com/azure/china/
+      url: /azure/china/
