--- a/articles/iot-pnp/index.yml
+++ b/articles/iot-pnp/index.yml
@@ -11,12 +11,12 @@ metadata:
   ms.author: dobett
   manager: philmea
   ms.date: 10/31/2019
-  ms.openlocfilehash: 5b01154fa3e5821ca577e4a910facff8d9cb968a
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: 75aa276fb41ebe717caa5c2f0dbdab5f9709237e
+  ms.sourcegitcommit: b8eba4e733ace4eb6d33cc2c59456f550218b234
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "91598037"
+  ms.lasthandoff: 11/23/2020
+  ms.locfileid: "95495238"
 landingContent:
 - title: IoT プラグ アンド プレイ
   linkLists:
@@ -30,20 +30,12 @@ landingContent:
   linkLists:
   - linkListType: quickstart
     links:
-    - text: IoT Hub にサンプル デバイスを接続する (C)
-      url: quickstart-connect-device-c.md
-    - text: IoT Hub にサンプル デバイスを接続する (C#)
-      url: quickstart-connect-device-csharp.md
-    - text: IoT Hub にサンプル デバイスを接続する (Java)
-      url: quickstart-connect-device-java.md
-    - text: IoT Hub にサンプル デバイスを接続する (Node.js)
-      url: quickstart-connect-device-node.md
-    - text: IoT Hub にサンプル デバイスを接続する (Python)
-      url: quickstart-connect-device-python.md
+    - text: IoT Hub にサンプル デバイスを接続する
+      url: quickstart-connect-device.md
   - linkListType: concept
     links:
     - text: 開発者ガイド
-      url: concepts-developer-guide-device-csharp.md
+      url: concepts-developer-guide-device.md
     - text: コンポーネント
       url: concepts-components.md
     - text: IoT プラグ アンド プレイの規則
@@ -54,10 +46,8 @@ landingContent:
   linkLists:
   - linkListType: quickstart
     links:
-    - text: ソリューションからデバイスを操作する (node.js)
-      url: quickstart-service-node.md
-    - text: ソリューションからデバイスを操作する (Python)
-      url: quickstart-service-python.md
+    - text: ソリューションからのデバイスの操作
+      url: quickstart-service.md
   - linkListType: concept
     links:
     - text: アーキテクチャ
