--- a/articles/postgresql/hyperscale/index.yml
+++ b/articles/postgresql/hyperscale/index.yml
@@ -9,12 +9,12 @@ metadata:
   ms.service: postgresql
   ms.subservice: hyperscale-citus
   ms.topic: landing-page
-  ms.openlocfilehash: 20e99db5f380ee24cf88987a7884292ca47f7e1e
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: e2734332e6ec99c19b5cb45256a5c96fb03258d0
+  ms.sourcegitcommit: 10d00006fec1f4b69289ce18fdd0452c3458eca5
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "90929018"
+  ms.lasthandoff: 11/21/2020
+  ms.locfileid: "95025125"
 landingContent:
 - title: 作業開始
   linkLists:
@@ -56,8 +56,8 @@ landingContent:
       url: ../concepts-hyperscale-choose-distribution-column.md
   - linkListType: how-to-guide
     links:
-    - text: サーバー グループのサイズ
-      url: ../howto-hyperscale-scaling.md
+    - text: サーバー グループのスケーリング
+      url: ../howto-hyperscale-scale-grow.md
     - text: テーブルの分散
       url: ../howto-hyperscale-modify-distributed-tables.md
     - text: メトリックに基づいたアラートの作成
