--- a/articles/synapse-analytics/toc.yml
+++ b/articles/synapse-analytics/toc.yml
@@ -115,12 +115,10 @@
             - name: アクセス制御
               items:
                 - name: 概要
-                  href: ../sql-database/sql-database-control-access.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
+                  href: ./security/access-control.md
+                  displayname: 'access, control'
                 - name: Synapse ワークスペースのマネージド ID
                   href: ./security/synapse-workspace-managed-identity.md
-                - name: SQL プール
-                  href: ./sql/access-control.md
-                  displayname: 'access, control'
         - name: ツール統合 (AI、ETL、BI)
           items:
             - name: Synapse Studio のトラブルシューティング
@@ -304,6 +302,8 @@
               href: ./sql-data-warehouse/sql-data-warehouse-concept-resource-utilization-query-activity.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
         - name: Security
           items:
+            - name: データベース アクセスの制御
+              href: ../sql-database/sql-database-control-access.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
             - name: データのセキュリティ
               items:
                 - name: 列レベルのセキュリティ
