--- a/articles/cognitive-services/form-recognizer/toc.yml
+++ b/articles/cognitive-services/form-recognizer/toc.yml
@@ -38,6 +38,10 @@
           items:
             - name: Python
               href: quickstarts/python-business-cards.md
+        - name: あらかじめ構築された請求書モデルを使用する
+          items:
+            - name: Python
+              href: quickstarts/python-invoices.md
         - name: テキスト レイアウト情報を取得する
           items:
             - name: Python
@@ -50,10 +54,14 @@
       href: tutorial-ai-builder.md
 - name: 概念
   items:
+    - name: レイアウトの抽出
+      href: concept-layout.md
     - name: Receipts
       href: concept-receipts.md
     - name: 名刺
       href: concept-business-cards.md
+    - name: Invoices
+      href: concept-invoices.md
 - name: 操作方法ガイド
   items:
     - name: トレーニング データ セットの作成
@@ -77,7 +85,7 @@
 - name: リファレンス
   items:
     - name: Form Recognizer API v2.1 プレビュー
-      href: 'https://westcentralus.dev.cognitive.microsoft.com/docs/services/form-recognizer-api-v2-1-preview-1/operations/AnalyzeBusinessCardAsync'
+      href: 'https://westcentralus.dev.cognitive.microsoft.com/docs/services/form-recognizer-api-v2-1-preview-2/operations/AnalyzeBusinessCardAsync'
     - name: Form Recognizer API v2.0
       href: 'https://westus2.dev.cognitive.microsoft.com/docs/services/form-recognizer-api-v2/operations/AnalyzeWithCustomForm'
     - name: SDK
