--- a/articles/iot-pnp/TOC.yml
+++ b/articles/iot-pnp/TOC.yml
@@ -12,39 +12,13 @@
     - name: 環境を設定する
       href: set-up-environment.md
     - name: デバイスを IoT Hub に接続する
-      items:
-        - name: C
-          href: quickstart-connect-device-c.md
-        - name: Node.js
-          href: quickstart-connect-device-node.md
-        - name: Python
-          href: quickstart-connect-device-python.md
-        - name: C#
-          href: quickstart-connect-device-csharp.md
-        - name: Java
-          href: quickstart-connect-device-java.md
+      href: quickstart-connect-device.md
     - name: ソリューションからのデバイスの操作
-      items:
-        - name: Node.js
-          href: quickstart-service-node.md
-        - name: Python
-          href: quickstart-service-python.md
-        - name: C#
-          href: quickstart-service-csharp.md
-        - name: Java
-          href: quickstart-service-java.md
+      href: quickstart-service.md
 - name: チュートリアル
   items:
-    - name: 複数のコンポーネント デバイスに接続する (C)
-      href: tutorial-multiple-components-c.md
-    - name: 複数のコンポーネント デバイスに接続する (C#)
-      href: tutorial-multiple-components-csharp.md
-    - name: 複数のコンポーネント デバイスに接続する (Java)
-      href: tutorial-multiple-components-java.md
-    - name: 複数のコンポーネント デバイスに接続する (Node.js)
-      href: tutorial-multiple-components-node.md
-    - name: 複数のコンポーネント デバイスに接続する (Python)
-      href: tutorial-multiple-components-python.md
+    - name: 複数のコンポーネント デバイスを接続する
+      href: tutorial-multiple-components.md
     - name: MQTT を使用してデバイスを接続する
       href: tutorial-use-mqtt.md
     - name: MXChip デバイスとの対話 (サンプル)
@@ -58,17 +32,7 @@
     - name: アーキテクチャ
       href: concepts-architecture.md
     - name: デバイス開発者ガイド
-      items:
-        - name: C#
-          href: concepts-developer-guide-device-csharp.md
-        - name: Node.js
-          href: concepts-developer-guide-device-node.md
-        - name: Java
-          href: concepts-developer-guide-device-java.md
-        - name: Python
-          href: concepts-developer-guide-device-python.md
-        - name: C
-          href: concepts-developer-guide-device-c.md
+      href: concepts-developer-guide-device.md
     - name: サービス開発者ガイド
       href: concepts-developer-guide-service.md
     - name: コンポーネント
