--- a/articles/machine-learning/toc.yml
+++ b/articles/machine-learning/toc.yml
@@ -448,6 +448,8 @@
               href: how-to-deploy-model-cognitive-search.md
             - name: カスタム Docker イメージを使用する
               href: how-to-deploy-custom-docker-image.md
+            - name: ローカル マシン
+              href: how-to-deploy-local.md
             - name: IoT Edge
               href: ../iot-edge/tutorial-deploy-machine-learning.md?context=%2fazure%2fmachine-learning%2fservice%2fcontext%2fml-context
             - name: FPGA 推論
